<resources>
    <string name="app_name">KTDCL-FPO</string>
    <string name="title_home">ಅಪ್ಲಿಕೇಶನ್</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="applicant_details">\nಅರ್ಜಿದಾರರು ವಿವರ</string>
    <string name="opposition_details">ಎದುರುದಾರರು/ಪ್ರತಿವಾದಿ</string>
    <string name="msg2">ಮೇಲ್ಕ೦ಡ ವಿಳಾಸದವನಾದ ನಾನು ಕೃಷಿ ಕಾರ್ಮಿಕನಾಗಿದ್ದು, ಎದುರಾಳಿ(ಪ್ರತಿವಾದಿ)ಯ ಜಾಗದಲ್ಲಿ ನಿರ್ಮಿಸಿಕೊ೦ಡಿರುವ  ವಾಸದ ಮನೆ ಮತ್ತು ವಾಸಕ್ಕೆ ಪೂರಕವಾದ ಜಾಗಗಳು ನನ್ನ ಸ್ವಾಧೀನದಲಿದ್ದು ಹಲವಾರು ವರ್ಷಗಳಿ೦ದ ವಾಸವಾಗಿರುತ್ತೇನೆ. ಅದರ ವಿವರ ಕೆಳಗಿನ೦ತಿದೆ.</string>
    <string name="site_details">ವಾಸದ ಮನೆ ಮತ್ತದರ ನಿವೇಶನ, ಅದಕ್ಕೆ ಲಗತ್ತಾಗಿರುವ ಜಾಗ ಹಾಗೂ ವಾಸಕ್ಕೆ ಪೂರಕವಾಗಿ  ಬಳಸುತ್ತಿರುವ ಇತರೆ ಸ್ವತ್ತುಗಳು</string>
    <string name="residing_details">ವಾಸದ ಮನೆಯ ನಿವೇಶನ ಮತ್ತು ಅದಕ್ಕೆ ಲಗತ್ತಾಗಿರುವ ಜಾಗ</string>
    <string name="title_rev">Revenue Application</string>
    <string name="taluk">Taluk</string>
    <string name="village">Village</string>
    <string name="new_village">new village</string>
    <string name="population">Population</string>
    <string name="total_family">Total Family</string>
    <string name="dist_from_old_village">Distance from Old Village</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_events">Events</string>
    <string name="title_beneficiary">Beneficiaries</string>
    <string name="title_service_req">Service Request</string>
    <string name="title_news_add">Add News</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="share_message">Hi I am using Thanda Development Corporation app. It is very useful for Employment and Training. https://play.google.com/store/apps/details?id=com.patelheggere.ktdcl</string>
    <string name="share_us_via">Share Via</string>
    <string name="title_activity">Activities</string>
    <string name="registration">Registration</string>
    <string name="mobile">Enter Mobile no</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone No.</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="father_name">ತಂದೆಯ ಹೆಸರು</string>
    <string name="enter_village">Village/Tanda:</string>
    <string name="gp">Panchayath:</string>
    <string name="enter_electionid">Enter Voter ID(optional)</string>
    <string name="admin">Admin</string>
    <string name="enrol">Enrol</string>
    <string name="contact_us">Contact us</string>
    <string name="change_lang">Change Language</string>
    <string name="logout">Logout</string>
    <string name="service_request">Service Request</string>
    <string name="enter_desc">Write your request / complaint</string>
    <string name="title_enrol">Enroll</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_training">Soft Skill Trg</string>
    <string name="confirmation">Confirm</string>
    <string name="yes">ಹೌದು</string>
    <string name="no">ಇಲ್ಲ</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">start</string>
    <string name="welcome">Welcome to KTDCL-FPO</string>
    <string name="name_required">Name Required</string>
    <string name="phone_correct">Enter Correct Phone Number</string>
    <string name="please_select_area">Please Select area</string>
    <string name="exp_lect">Daily News</string>
    <string name="slide_1_desc">Daily updates with place, photo and time will be getting and Events with Date and place details will be shared</string>
    <string name="slide_2_title">Enrollment for job</string>
    <string name="slide_2_desc">Users can enroll for job requirement and we will be recommend right and vacant job for you </string>
    <string name="slide_3_title">Training for un skilled</string>
    <string name="slide_3_desc">Users can get train from the app content to improve communication skills and other skills required for employment</string>
    <string name="slide_4_title">Training</string>
    <string name="slide_4_desc">Training and other details related to training will be given to the users they can utilize the information shared </string>
    <string name="later_you_can_change">Later you can change your Language</string>
    <string name="kannada">Kannada</string>
    <string name="engish">English</string>
    <string name="continu">Continue</string>
    <string name="interest">Area of Interest</string>
    <string name="register">Register</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="name">ರೈತರ ಹೆಸರು</string>
    <string name="uid">ಆಧಾರ್ ನಂ.</string>
    <string name="phone">ಮೊಬೈಲ್</string>
    <string name="email">Email</string>
    <string name="change_language">Change Language</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="dept">Department</string>
    <string name="title">Title</string>
    <string name="quali">Qualification</string>
    <string name="noti_date">Notification Date:</string>
    <string name="last_date">Last Date:</string>
    <string name="exam_mode">Exam mode</string>
    <string name="payment">Payment Type:</string>
    <string name="documents">Documents;</string>
    <string name="exam_date">Exam Date:</string>
    <string name="no_post">No of Post:</string>
    <string name="website">Website:</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="qualification">Qualification</string>
    <string name="mode_of_exam">Mode of Exam</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="no_of_post">No of Posts</string>
    <string name="eligibiltiy">Eligibility:</string>
    <string name="attempts">Age Limit and Attempts</string>
    <string name="syllabus">Syllabus:</string>
    <string name="tq">Taluk</string>
    <string name="dist">District</string>
    <string name="scan_uid">Scan Aadhar</string>
    <string name="submit">Submit</string>
    <string name="curr_stay">Are you living presently in tanda?</string>
    <string name="news_title_en">News Title in English</string>
    <string name="news_desc_en">News Desc in English</string>
    <string name="news_title_kn">News Title in Kannada</string>
    <string name="news_desc_kn">News Desc in Kannada</string>
    <string name="place">Enter Place in Kannada</string>
    <string name="place_en">Enter place in English</string>
    <string name="news">News</string>
    <string name="email_correct">Enter Correct Email</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="language">Select Language</string>
    <string name="invalid">invalid credential or not registered</string>
    <string name="signup">Not Registered? click here</string>
    <string name="sigin">have you registered? click here</string>
    <string name="all_mandatory">All Fields are mandatory</string>
    <string name="other_place">Residing Place</string>
    <string name="Select_Taluk">ತಾಲ್ಲೂಕು ಆಯ್ಕೆಮಾಡಿ</string>
    <string name="Select_Tanda">ತಾಂಡಾ ಆಯ್ಕೆಮಾಡಿ</string>
    <string name="Select_District">ಜಿಲ್ಲೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ</string>
    <string name="select_desired_job">Select Desired Job</string>
    <string name="select_qual">Select Qualification</string>
    <string name="upload_image">upload image</string>
    <string name="event_place">Place:</string>
    <string name="title_soft_skill">Soft Skill</string>
    <string name="no_data">No data found</string>
    <string name="conf_message">Are you sure want to change Language?</string>
    <string name="communicate">communicate</string>
    <string name="enter_aadhar">Enter 12 digit Aadhar number</string>
    <string name="save_success">Data Saved Successfully</string>
    <string name="duplicate_aadhar">Already Registered with this Aadhar</string>
    <string name="duplicate_mobile">Already Registered with this Phone number</string>
    <string name="enter_registered">Enter your Registered 10 digit Phone No. We will send Password via Text SMS</string>
    <string name="this_no_not_reg">This No is not Registered</string>
    <string name="pwd_sent">Password sent to your phone No.</string>
    <string name="forgot_pwd">Forgot Password? click here</string>
    <string name="dob">Date of Birth</string>
    <string name="male">ಗಂಡು </string>
    <string name="female">ಹೆಣ್ಣು</string>
    <string name="others">ಇತರರು</string>
    <string name="gender">ಲಿಂಗ</string>
    <string name="handicapped">Differently abled</string>
    <string name="title_buy_sale">Buy/Sale</string>
    <string name="title_literature">Culture</string>
    <string name="adds">KARNATAKA THANDA DEVELOPMENT CORPORATION LIMITED \n # 19/4, Sairabag, 2nd floor, Cunningham Road \n Bangalore - 560 052 \n Ph:+91 080 22285561 /62/63/65 \n Web: www.banjarathanda.kar.nic.in</string>
    <string name="answer">Answer : </string>
    <string name="total_answer">Total Answers : </string>
    <string name="answer_here">Click Here to Answer </string>
    <string name="write_comment">Write Answer</string>
    <string name="officals">Officials</string>
    <string name="google_maps_key">eer</string>
    <string name="tanda_on_map">Tanda on Map</string>
    <string name="fruits">FRUITS No</string>
    <string name="women_count">ಕುಟುಂಬದ ಮಹಿಳೆಯರ ಸಂಖ್ಯೆ</string>
    <string name="gents_count">ಕುಟುಂಬದ ಪುರುಷರ ಸಂಖ್ಯೆ</string>
    <string name="children_count">ಕುಟುಂಬದ ಮಕ್ಕಳ ಸಂಖ್ಯೆ</string>
    <string name="educated_count">ಕುಟುಂಬದ ವಿದ್ಯಾವಂತರ ಸಂಖ್ಯೆ</string>
    <string name="main_income_source">ಕುಟುಂಬದ ಮುಖ್ಯ ಆದಾಯದ ಮೂಲ</string>
    <string name="sec_income_src">ದ್ವಿತೀಯ ಆದಾಯದ ಮೂಲ</string>
    <string name="survey_num">ಸರ್ವೆ ನಂ</string>
    <string name="land_area">ಹಿಡುವಳಿ ಎಕರೆಗಳಲ್ಲಿ</string>
    <string name="land_value">ಭೂಮಿ ಮೌಲ್ಯ(ರೂ/ಎಕರೆ)</string>
    <string name="crop_grown">ಬೆಳೆದ ಬೆಳೆ</string>
    <string name="irrigation_land">ನೀರಾವರಿ</string>
    <string name="dry_land">"ಒಣ ಭೂಮಿ "</string>
    <string name="wastee_land">ಪಾಳು</string>
    <string name="seeds">ಬೀಜಗಳು</string>
    <string name="purchase_method">ಖರೀದಿ ವಿಧಾನ</string>
    <string name="cash">ಸಾಲ</string>
    <string name="loan">ನಗದು</string>
    <string name="loan_tenure">ಸಾಲ ಆಗಿದ್ದರೆ ಸಾಲದ ಅವಧಿ ನಮೂದಿಸಿ</string>
    <string name="perc_25">25%</string>
    <string name="perc_50">50%</string>
    <string name="perc_75">75%</string>
    <string name="perc_100">100%</string>
    <string name="loan_per">ಸಾಲ ಶೇಕಡಾವಾರು</string>
    <string name="loan_ri">ಬಡ್ಡಿದರ</string>
    <string name="seeds_quantity">ಬೀಜಗಳು ಪ್ರಮಾಣ(KG)</string>
    <string name="crop_name">ಬೆಳೆ ಹೆಸರು</string>
    <string name="save">Save</string>
    <string name="mansoon">ಮುಂಗಾರು</string>
    <string name="hingaru">ಹಿಂಗಾರು</string>
    <string name="summer">ಬೇಸಿಗೆ</string>
    <string name="variety">ತಳಿ ಹೆಸರು</string>
    <string name="man_exp">ಉತ್ಪಾದನಾ ವೆಚ್ಚ (ರೂ.)</string>
    <string name="manufacture_quintol">ಉತ್ಪಾದನೆ (ಕ್ವಿ)</string>
    <string name="sub_product">ಉಪ ಉತ್ಪನ್ನ (ಕ್ವಿ)</string>
    <string name="add_crop">Add crop</string>
    <string name="remove_crop">Remove crop</string>
    <string name="marketing_details">ಉತ್ಪನ್ನ ಮಾರ್ಕೆಟಿಂಗ್ ವಿವರಗಳು</string>
    <string name="photo">ನಿಮ್ಮ ಫೋಟೋ ಸೆರೆಹಿಡಿಯಿರಿ</string>
    <string name="post_harvest">ಕೊಯ್ಲು ನಂತರದ ಮೂಲಭೂತ ಸೌಲಭ್ಯ</string>
    <string name="drying_yard">ನೀವು ಒಣಗಿಸುವ ಅಂಗಳವನ್ನು ಹೊಂದಿದ್ದೀರಾ?</string>
    <string name="processing_tools">ಪ್ರಾಥಮಿಕ ಸಂಸ್ಕರಣಾ ಉಪಕರಣಗಳು</string>
    <string name="model">ಮಾದರಿ</string>
    <string name="capicity">ಸಾಮರ್ಥ್ಯ</string>
    <string name="aadhar">ಆಧಾರ್ ಫೋಟೋ ಸೆರೆಹಿಡಿಯಿರಿ</string>
    <string name="upload_photo">ಫೋಟೋ ಅಪ್‌ಲೋಡ್ ಮಾಡಿ</string>
    <string name="upload_aadhar">ಆಧಾರ್ ಅನ್ನು ಅಪ್ಲೋಡ್ ಮಾಡಿ</string>
</resources>