<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_harvest"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/drying_yard"
                android:layout_marginTop="8dp"/>
            <RadioGroup
                android:id="@+id/rg_drying_yard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/bank_yes"
                    android:text="@string/yes"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/bank_no"
                    android:text="@string/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/processing_tools"
                android:layout_marginTop="8dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/model" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/capacity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:hint="@string/capicity" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marketing_details"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:id="@+id/market_view"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp">
            <Button
                android:id="@+id/addCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_crop"/>
            <Button
                android:layout_marginLeft="8dp"
                android:id="@+id/removeCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_crop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <Button
                android:gravity="center"
                android:id="@+id/button_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/imageFarmerPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="gone"
                android:src="@drawable/tanda_logo"/>
            <Button
                android:id="@+id/upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/upload_photo"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:gravity="center"
                android:id="@+id/button_aadhar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aadhar"/>
            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/imageFarmerAadhar"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:visibility="gone"
                android:src="@drawable/tanda_logo"/>
            <Button
                android:id="@+id/upload_aadhar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/upload_aadhar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="go back"/>
            <Button
                android:gravity="center"
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>