<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_crop_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:hint="@string/crop_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/mansoon"
            android:text="@string/mansoon"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/hingaaru"
            android:text="@string/hingaru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/summer"
            android:text="@string/summer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_crop_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:hint="@string/land_area" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_crop_variety"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:hint="@string/variety" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_manufacture_exp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:hint="@string/man_exp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_crop_yield"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:hint="@string/manufacture_quintol" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_crop_sub_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:hint="@string/sub_product" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>